CCD-4198 Find cases with HMCTSServiceId, but not orgs