@@ -4,6 +4,7 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import lombok.Data;
 import uk.gov.hmcts.ccd.domain.model.casedataaccesscontrol.enums.RoleType;
 
+import java.util.Collections;
 import java.util.List;
 
 @Data
@@ -28,7 +29,7 @@ public class RoleAssignmentQuery {
     }
 
     public RoleAssignmentQuery(String caseId, String userId, List<String> roleNames) {
-        this.actorId = List.of(userId);
+        this.actorId = userId == null ? Collections.emptyList() : List.of(userId);
         this.attributes = Attributes.builder().caseId(List.of(caseId)).build();
         this.roleType = List.of(RoleType.CASE.name());
         this.roleName = roleNames;
